--- a/src/ZectranetBundle/Resources/views/QnASettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnASettings.html.twig
@@ -108,15 +108,19 @@
             </div>
 
             <!------------ Begin of project log ------------>
-            <div class="row">
+            <div class="row" style="margin-bottom: 30px;">
                 <div class="col-xs-12">
                     <div class="list-group">
                         <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
                             <div class="text-center">
                                 Project logs
+                                <a class="btn-xs pull-right" ng-click="QnALogsVisible = !QnALogsVisible">
+                                    <i ng-hide="QnALogsVisible" class="fa fa-plus-circle fa-fw"></i>
+                                    <i ng-show="QnALogsVisible" class="fa fa-fw fa-minus-circle"></i>
+                                </a>
                             </div>
                         </div>
-                        <div class="list-group-item">
+                        <div class="list-group-item" ng-show="QnALogsVisible">
                             <table class="table table-striped table-hover">
                                 <thead>
                                 <tr>
