--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -247,15 +247,19 @@
         </div>
 
         <!------------ Begin of project log ------------>
-        <div class="row">
+        <div class="row" style="margin-bottom: 35px;">
             <div class="col-xs-12">
                 <div class="list-group">
                     <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
                         <div class="text-center">
                             Project logs
+                            <a class="btn-xs pull-right" ng-click="HFLogsVisible = !HFLogsVisible">
+                                <i ng-hide="HFLogsVisible" class="fa fa-plus-circle fa-fw"></i>
+                                <i ng-show="HFLogsVisible" class="fa fa-fw fa-minus-circle"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="list-group-item">
+                    <div class="list-group-item" ng-show="HFLogsVisible">
                         <table class="table table-striped table-hover">
                             <thead>
                             <tr>
