--- a/src/ZectranetBundle/Resources/views/homeOffice.html.twig
+++ b/src/ZectranetBundle/Resources/views/homeOffice.html.twig
@@ -29,7 +29,7 @@
                     <b>Create Project</b>
                 </li>
                 <li class="list-group-item">
-                    <form action="{{ path('zectranet_get_office_profile', { 'office_id': office.id } ) }}" method="post">
+                    <form action="{{ path('zectranet_add_project', { 'office_id': office.id } ) }}" method="post">
                         <p>
                             <label style="width: 100%;">
                                 Project name:
