--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -56,7 +56,7 @@
 				{% if app.user %}
                     <li class="dropdown" ng-cloak>
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <div class="fa fa-fw"><b>P</b></div>
+                            <div class="fa fa-fw"><b>O</b></div>
                             <i class="fa fa-caret-down"></i>
                         </a>
 
@@ -124,7 +124,7 @@
                                     <button class="btn btn-default btn-success" ng-click="acceptHFMembershipRequest(requesthf.id);">
                                         Accept
                                     </button>
-                                    <button class="btn btn-default btn-danger" ng-click="acceptHFMembershipRequest(requesthf.id);">
+                                    <button class="btn btn-default btn-danger" ng-click="declineHFMembershipRequest(requesthf.id);">
                                         Decline
                                     </button>
                                     <button class="btn btn-default btn-info" ng-click="moreInfoContactMembershipRequest(requesthf);">
@@ -138,7 +138,9 @@
                     <li class="dropdown" ng-cloak>
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <div class="fa fa-fw"><b>C</b></div>
-                            <span ng-if="requests.contactRequests.length > 0 || contactNotifications.length > 0" style="position: absolute; top: 0; right: 14px; font-size: 15px; text-shadow: 0 0 15px #00c6ff;">
+                            <span ng-if="requests.contactRequests.length > 0 || contactNotifications.length > 0"
+                                  style="position: absolute; top: 0; right: 14px; font-size: 15px; text-shadow: 0 0 15px #00c6ff;"
+                                  ng-class="{ 'visible-element': FirstInit }" class="hidden-element">
                                 [[ requests.contactRequests.length + contactNotifications.length ]]
                             </span>
                             <i class="fa fa-caret-down"></i>
