--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -122,9 +122,7 @@
                                     <span>Connected Projects</span>
                                     {% if connectedProjectsCount > 0 %}
                                         <span class="text-right pull-right">
-                                            {% if office is defined %}
-                                                <i class="fa fa-arrow-up fa-fw"></i>
-                                            {% elseif project is defined and project in app.user.projects and project.users | length > 1 %}
+                                            {% if project is defined and project in app.user.projects and project.users | length > 1 %}
                                                 <i class="fa fa-arrow-up fa-fw"></i>
                                             {% elseif forum is defined and forum in app.user.connectedHFForums and forum.users | length > 1 %}
                                                 <i class="fa fa-arrow-up fa-fw"></i>
