--- a/web/bundles/zectranet/css/bootstrap.css
+++ b/web/bundles/zectranet/css/bootstrap.css
@@ -5849,20 +5849,22 @@ button.close {
   margin-left: -3px;
 }
 .tooltip-inner {
-  max-width: 200px;
-  padding: 3px 8px;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  background-color: #000;
-  border-radius: 4px;
+    word-wrap: break-word;
+    max-width: 90%;
+    padding: 3px 8px;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    background-color: #000;
+    border-radius: 4px;
+    white-space: normal;
 }
 .tooltip-arrow {
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
+      position: absolute;
+      width: 0;
+      height: 0;
+      border-color: transparent;
+      border-style: solid;
 }
 .tooltip.top .tooltip-arrow {
   bottom: 0;
@@ -5886,11 +5888,11 @@ button.close {
   border-top-color: #000;
 }
 .tooltip.right .tooltip-arrow {
-  top: 50%;
-  left: 0;
-  margin-top: -5px;
-  border-width: 5px 5px 5px 0;
-  border-right-color: #000;
+      top: 50%;
+      left: 0;
+      margin-top: -5px;
+      border-width: 5px 5px 5px 0;
+      border-right-color: #000;
 }
 .tooltip.left .tooltip-arrow {
   top: 50%;
