Make some changes in project requests logic

--- a/src/ZectranetBundle/Resources/views/QnASettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnASettings.html.twig
@@ -35,7 +35,7 @@
                 <div class="col-md-3 " style="margin-top: 15px;">
                     <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px;overflow-y: auto; margin-bottom: 0;">
                         <li class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
-                            HO Contacts
+                            HO Contacts available
                         </li>
                         <li class="list-group-item" style="cursor: pointer;"
                             ng-repeat="HO_Contact in HO_Contacts"
