--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -22,7 +22,7 @@
                 <div class="col-md-3 " style="margin-top: 15px;">
                     <div class="list-group" style="margin-bottom: 0;">
                         <div class="list-group-item active" style="background-color: #ddedf4; color: #000000;">
-                            HO Contacts
+                            HO Contacts available
                         </div>
                     </div>
                     <ul class="list-group" style="box-shadow: 2px 3px 6px 0 darkkhaki; height: 250px;overflow-y: auto; margin-bottom: 0;">
